feat: reservation and basic repo setup

--- a/app/UI/Modules/Admin/Home/templates/default.latte
+++ b/app/UI/Modules/Admin/Home/templates/default.latte
@@ -1,6 +1,6 @@
 {block #content}
 <h1>SECRET PAGE!</h1>
-<a n:href="Sign:out" class="btn btn-danger">Logout</a>
+<a n:href=":Front:Sign:out" class="btn btn-danger">Logout</a>
 
 <hr>
 
