--- a/app/UI/Modules/Admin/templates/@layout.latte
+++ b/app/UI/Modules/Admin/templates/@layout.latte
@@ -1,7 +1,44 @@
 {layout '../../Base/templates/@layout.latte'}
 
 {block #head}
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css" defer />
-	<link rel="stylesheet" href="{$basePath}/assets/admin.css" defer />
-	<script src="{$basePath}/assets/admin.js" defer></script>
+	<link href="{$basePath}/css/bootstrap.min.css" rel="stylesheet">
+{/block}
+
+{block #main}
+	<script src="{$basePath}/js/bootstrap.bundle.min.js"></script>
+	<script src="https://unpkg.com/naja@3/dist/Naja.min.js"></script>
+	<script>
+		naja.initialize();
+		console.log("NAJA INITIALIZED");
+	</script>
+
+	<div class="container-fluid">
+		<div class="row">
+			<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar">
+				<div class="sidebar-sticky">
+					<ul class="nav flex-column">
+						<li class="nav-item">
+							<a class="nav-link active" n:href="':Front:Home:default'">
+								Hlavní stránka
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link active" n:href="':Front:Home:default'">
+								Dashboard
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" n:href="':Front:Home:default'">
+								Users
+							</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+			<main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+				{include #content}
+{*            {include 'flashMessages.latte'}*}
+			</main>
+		</div>
+	</div>
 {/block}
