--- a/app/UI/Modules/Front/templates/@layout.latte
+++ b/app/UI/Modules/Front/templates/@layout.latte
@@ -1,31 +1,36 @@
 {layout '../../Base/templates/@layout.latte'}
 
 {block #head}
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" defer/>
+	<link href="{$basePath}/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="{$basePath}/assets/front.css" defer/>
 	<script src="{$basePath}/assets/front.js" defer></script>
-{/}
+{/block}
 
 {block #main}
+	<script src="{$basePath}/js/bootstrap.bundle.min.js"></script>
+	<script src="https://unpkg.com/naja@3/dist/Naja.min.js"></script>
+	<script>
+		naja.initialize();
+		console.log("NAJA INITIALIZED");
+	</script>
 	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 		<header class="masthead mb-auto">
 			<div class="inner">
-				<h3 class="masthead-brand">Webapp</h3>
+				<h3 class="masthead-brand">Ko</h3>
 				<nav class="nav nav-masthead justify-content-center">
-					<a n:class="$presenter->isLinkCurrent(':Front:Home:') ? active, nav-link" n:href=":Front:Home:">Home</a>
-					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, nav-link" n:href=":Admin:Home:">Admin</a>
+					<a n:class="$presenter->isLinkCurrent(':Front:Home:') ? active, nav-link" n:href=":Front:Home:">Domů</a>
+					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, nav-link" n:href=":Admin:Home:">Konference</a>
+					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, nav-link" n:href=":Admin:Home:">Moje rezervace</a>
+					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, nav-link" n:href=":Admin:Home:">Moje prezentace</a>
+					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, nav-link" n:href=":Admin:Home:">Moje konference</a>
 					<a n:class="$presenter->isLinkCurrent(':Pdf:Home:') ? active, nav-link" n:href=":Pdf:Home:">PDF example</a>
 				</nav>
 			</div>
 		</header>
 
 		<main role="main" class="inner cover">
-			<h1 class="cover-heading">Webapp skeleton.</h1>
-			<p class="lead">This is example project based on <a href="https://nette.org">Nette Framework</a></p>
-			<p class="lead">And also many <a href="https://contributte.org">Contributte + Nettrine</a> packages.</p>
-			<div class="lead">
-				<a href="https://github.com/contributte/webapp-skeleton" class="btn btn-lg btn-secondary">Learn more in docs</a>
-			</div>
+			{block content}
+			{/block}
 		</main>
 
 		<footer class="mastfoot mt-auto">
@@ -35,4 +40,4 @@
 			</div>
 		</footer>
 	</div>
-{/}
+{/block}
