--- a/www/assets/front.css
+++ b/www/assets/front.css
@@ -1,124 +1,50 @@
-/*
- * Globals
- */
-
-/* Links */
-a,
-a:focus,
-a:hover {
-    color: #fff;
+.jerabek {
+	color: #7456FF;
 }
 
-/* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
-    color: #333;
-    text-shadow: none; /* Prevent inheritance from `body` */
-    background-color: #fff;
-    border: .05rem solid #fff;
+nav {
+	font-family: 'Poppins', sans-serif;
 }
 
+.navbar {
+	background-color: #34353A; /* Tmavý šedý background */
 
-/*
- * Base structure
- */
-
-html,
-body {
-    height: 100%;
-    background-color: #333;
+	font-weight: bolder;
+	padding: 0;
 }
 
-body {
-    display: -ms-flexbox;
-    display: flex;
-    color: #fff;
-    text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+.btn-purple-out {
+	border: 2px solid #7456FF;
+	border-radius: 5px;
+	background-color: transparent;
+	transition: background-color 0.5s;
 }
 
-.cover-container {
-    max-width: 42em;
+.btn-purple-out:hover  {
+	border: 2px solid #7456FF;
+	border-radius: 5px;
+	background-color: #7456FF;
 }
 
-
-/*
- * Header
- */
-.masthead {
-    margin-bottom: 2rem;
+.navbar-brand {
+	color: #fff !important; /* Bílá barva textu */
+	font-size: 24px;
+	font-weight: bolder;
 }
 
-.masthead-brand {
-    margin-bottom: 0;
+.navbar-toggler {
+	border-color: rgba(255, 255, 255, 0.1); /* Změna barvy okraje toggle button na světlejší */
 }
 
-.nav-masthead .nav-link {
-    padding: .25rem 0;
-    font-weight: 700;
-    color: rgba(255, 255, 255, .5);
-    background-color: transparent;
-    border-bottom: .25rem solid transparent;
+.nav-link {
+	color: #fff !important; /* Bílá barva odkazů */
 }
 
-.nav-masthead .nav-link:hover,
-.nav-masthead .nav-link:focus {
-    border-bottom-color: rgba(255, 255, 255, .25);
+.nav-link:hover {
+	color: #7456FF !important; /* Bílá barva odkazů */
 }
 
-.nav-masthead .nav-link + .nav-link {
-    margin-left: 1rem;
-}
-
-.nav-masthead .active {
-    color: #fff;
-    border-bottom-color: #fff;
-}
-
-@media (min-width: 48em) {
-    .masthead-brand {
-        float: left;
-    }
-
-    .nav-masthead {
-        float: right;
-    }
-}
-
-
-/*
- * Cover
- */
-.cover {
-    padding: 0 1.5rem;
-}
-
-.cover .btn-lg {
-    padding: .75rem 1.25rem;
-    font-weight: 700;
-}
-
-.cover p a {
-    font-weight: bold;
-    text-decoration: underline;
-}
-
-
-/*
- * Footer
- */
-.mastfoot {
-    color: rgba(255, 255, 255, .5);
-}
-
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-}
-
-@media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-        font-size: 3.5rem;
-    }
+footer {
+	background-color: #34353A; /* Tmavě šedé pozadí */
+	color: white;
 }
