--- a/app/UI/Modules/Admin/templates/@layout.latte
+++ b/app/UI/Modules/Admin/templates/@layout.latte
@@ -25,6 +25,11 @@
 								Uživatelé
 							</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" n:href="':Admin:Conference:default'">
+								Konference
+							</a>
+						</li>
 					</ul>
 				</div>
 			</nav>
