feat: presentation management + minor fixes

--- a/app/UI/Modules/Admin/Home/templates/default.latte
+++ b/app/UI/Modules/Admin/Home/templates/default.latte
@@ -1,8 +1,6 @@
 {block #content}
-<h1>SECRET PAGE!</h1>
-<a n:href=":Front:Sign:out" class="btn btn-danger">Logout</a>
+<h1>DASHBOARD</h1>
+<a n:href=":Front:Sign:out" class="btn btn-danger">Odhlásit se</a>
 
 <hr>
 
-<h2>Orders</h2>
-{control orderForm}
