--- a/app/UI/Modules/Admin/templates/@layout.latte
+++ b/app/UI/Modules/Admin/templates/@layout.latte
@@ -16,13 +16,18 @@
 							</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link active" n:href="':Front:Home:default'">
+							<a class="nav-link active" n:href="':Admin:Home:default'">
 								Dashboard
 							</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" n:href="':Admin:User:default'">
 								Uživatelé
+							</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" n:href="':Admin:Presentation:default'">
+								Prezentace
 							</a>
 						</li>
 					</ul>
