--- a/www/assets/front.css
+++ b/www/assets/front.css
@@ -44,6 +44,71 @@ nav {
 	color: #7456FF !important; /* Bílá barva odkazů */
 }
 
+/*SLIDER*/
+.carousel-inner {
+	/*height: 800px; !* Nastavte požadovanou výšku karuselu *!*/
+}
+
+.dropdown:hover .dropdown-menu {
+	display: block;
+	margin-top: 0; /* remove the gap so it doesn't close */
+}
+
+.carousel-inner img {
+	height: 100%; /* Nastaví výšku obrázku podle výšky kontejneru */
+	object-fit: contain; /* Ořízne obrázek a vyplní kontejner */
+}
+
+.carousel-item {
+	position: relative; /* Nastavíme relativní pozici pro položku karuselu */
+}
+
+.carousel-item .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	background: rgba(0, 0, 0, 0.7); /* Nastaví tmavý překryv s průhledností 50% */
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	color: white;
+	text-align: center;
+	z-index: 1; /* Umístí overlay nad obrázek */
+}
+
+.overlay h2 {
+	font-size: 64px;
+	margin: 0;
+}
+
+/* //SLIDER */
+
+/* PRESENTATION CARDS */
+.presentation-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6); /* Ztmavení překrytí */
+	color: white;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 2em;
+	font-weight: bold;
+	z-index: 1;
+}
+
+.card-image-container {
+	position: relative;
+}
+/* //PRESENTATION CARDS*/
+
+
+
 footer {
 	background-color: #34353A; /* Tmavě šedé pozadí */
 	color: white;
