--- a/app/UI/Modules/Front/templates/@layout.latte
+++ b/app/UI/Modules/Front/templates/@layout.latte
@@ -62,15 +62,14 @@
 	{/block}
 
 
-	<div class="container d-flex w-100 h-100 p-3 mx-auto flex-column">
-
-
+	<div class="container py-4">
 		<main role="main" class="inner cover">
 			{block content}
 			{/block}
 		</main>
-
 	</div>
+
+
         <footer>
             <div class="container py-5">
                 <div class="row gy-3">
