--- a/app/UI/Components/Presentation/templates/PresentationList.latte
+++ b/app/UI/Components/Presentation/templates/PresentationList.latte
@@ -9,7 +9,7 @@
 						{else}
 							<img class="card-img-top" src="{$basePath}/uploads/presentations/default.jpg" alt="Card image cap">
 						{/if}
-                {if $presentation->endsAt < $currentDateTime} <!-- Zkontroluje, zda prezentace již skončila -->
+               			{if $presentation->endsAt < $currentDateTime} <!-- Zkontroluje, zda prezentace již skončila -->
 							<div class="presentation-overlay">PROBĚHLO</div>
 						{/if}
 					</div>
@@ -61,7 +61,9 @@
 						<a href="{plink :Front:Presentations:detail id => $presentation->getId()}" class="btn btn-primary">Více informací</a>
 
 						{if $presentation->speaker->getId() === $user->getId()}
-							<a href="#" class="btn btn-warning">Upravit</a>
+							<a n:href="edit! $presentation->getId()" class="btn btn-warning ajax" data-bs-toggle="modal" data-bs-target="#dialog">Upravit</a>
+
+{*							<a n:href="edit! $presentation->getId()" class="btn btn-warning ajax">Upravit</a>*}
 						{/if}
 					</div>
 				</div>
@@ -71,4 +73,32 @@
 	{else}
 		<h5 class="text-center">Nenalezeny žádné prezentace.</h5>
 	{/if}
+</div>
+
+
+<div class="modal fade" id="dialog" tabindex="-1" aria-labelledby="dialog-label" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="dialog-label">Upravit prezentaci</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Zavřít">
+				</button>
+			</div>
+			<div class="modal-body">
+				{snippet presentationEditSnippet}
+					{if $currentPresentationId}
+						{control presentationEditForm}
+					{else}
+						<div class="text-center">
+							<div class="spinner-border" role="status">
+							</div>
+						</div>
+					{/if}
+				{/snippet}
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zavřít</button>
+			</div>
+		</div>
+	</div>
 </div>
