--- a/app/UI/Modules/Admin/templates/@layout.latte
+++ b/app/UI/Modules/Admin/templates/@layout.latte
@@ -30,6 +30,11 @@
 								Prezentace
 							</a>
 						</li>
+						<li class="nav-item">
+							<a class="nav-link" n:href="':Admin:Reservation:default'">
+								Rezervace
+							</a>
+						</li>
 					</ul>
 				</div>
 			</nav>
