--- a/app/UI/Modules/Front/templates/@layout.latte
+++ b/app/UI/Modules/Front/templates/@layout.latte
@@ -48,6 +48,9 @@
 				<li class="nav-item">
 						<a class="btn btn-success mx-2" n:href=":Front:Sign:in">Přihlásit se</a>
 				</li>
+				<li class="nav-item">
+						<a class="btn btn-primary mx-2" n:href=":Front:Sign:up">Registrovat se</a>
+				</li>
 				{/if}
 
 				{if $user->isInRole('admin')}
