--- a/app/UI/Modules/Front/Home/templates/default.latte
+++ b/app/UI/Modules/Front/Home/templates/default.latte
@@ -17,3 +17,6 @@
 
 	<h2 class="text-center">Nejpopulárnější prezentace</h2>
 	{control popularPresentations}
+
+	<h2 class="text-center">SoonConferences</h2>
+	{control soonConferences}
