--- a/app/UI/Modules/Front/Presentations/templates/detail.latte
+++ b/app/UI/Modules/Front/Presentations/templates/detail.latte
@@ -19,7 +19,7 @@
 {block content}
 	<div class="row">
 		<div class="col">
-			<a class="btn btn-secondary" n:href=":Front:Home:default">Zpátky na konferenci</a>
+			<a class="btn btn-secondary" href="{plink :Front:Conference:detail id => $presentation->conference->getId()}">Zpátky na konferenci</a>
 		</div>
 	</div>
 
