--- a/app/UI/Modules/Front/templates/@layout.latte
+++ b/app/UI/Modules/Front/templates/@layout.latte
@@ -42,7 +42,7 @@
 				  </li>
 				</div>
 				<li class="nav-item">
-						<a class="btn btn-success mx-2 me-4" n:href=":Front:Sign:out">Vytvořit konferenci</a>
+					<a href="#" class="btn btn-success mx-2 me-4" data-bs-toggle="modal" data-bs-target="#dialog-conf-create">Vytvořit konferenci</a>
 				</li>
 				{else}
 				<li class="nav-item">
@@ -108,4 +108,22 @@
                 </div>
             </div>
         </footer>
+
+<div class="modal fade" id="dialog-conf-create" tabindex="-1" aria-labelledby="dialog-label" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="dialog-label">Vytvořit konferenci</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Zavřít">
+				</button>
+			</div>
+			<div class="modal-body">
+				{control conferenceForm}
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zavřít</button>
+			</div>
+		</div>
+	</div>
+</div>
 {/block}
