--- a/app/UI/Modules/Base/templates/@layout.latte
+++ b/app/UI/Modules/Base/templates/@layout.latte
@@ -17,6 +17,7 @@
 	<meta name="author" content="f3l1x">
 
 	<link href="{$basePath}/css/bootstrap.min.css" rel="stylesheet">
+	<link href="{$basePath}/css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="{$basePath}/assets/datagrid.css">
 	<link rel="stylesheet" href="{$basePath}/assets/datagrid-spinners.css">
 
