adding and editing rooms in conference detail

--- a/app/UI/Modules/Front/Conference/templates/detail.latte
+++ b/app/UI/Modules/Front/Conference/templates/detail.latte
@@ -117,6 +117,7 @@
 			{*	MISTNOSTI	*}
 			<div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
 				{control roomGrid}
+				<a href="{link 'Room:create', conferenceId => $conferenceId}" class="btn btn-sm btn-success">Přidat novou místnost</a>
 			</div>
 		{/if}
 	</div>
