--- a/app/UI/Modules/Front/Conference/templates/detail.latte
+++ b/app/UI/Modules/Front/Conference/templates/detail.latte
@@ -171,7 +171,7 @@
 					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Zavřít">
 					</button>
 				</div>
-				<div cflass="modal-body">
+				<div class="modal-body">
 					{control presentationForm}
 				</div>
 				<div class="modal-footer">
