--- a/app/UI/Components/Presentation/templates/PresentationList.latte
+++ b/app/UI/Components/Presentation/templates/PresentationList.latte
@@ -57,16 +57,6 @@
 							</div>
 						</div>
 
-                        <!-- Konec -->
-                        <div class="row">
-                            <div class="col-5">
-                                <h6 class="card-subtitle mb-2">Konec:</h6>
-                            </div>
-                            <div class="col-7">
-                                <h6 class="card-subtitle mb-2">{$presentation->endsAt|date:'d.m.Y H:i'}</h6>
-                            </div>
-                        </div>
-
                         <!-- Přednášející -->
                         <div class="row">
                             <div class="col-5">
@@ -75,6 +65,16 @@
                             <div class="col-7">
                                 <h6 class="card-subtitle mb-2">{$presentation->speaker->getFullName()}</h6>
                             </div>
+                        </div>
+
+					<!-- Konec -->
+						<div class="row">
+								<div class="col-5">
+									<h6 class="card-subtitle mb-2">Počet účastníků:</h6>
+								</div>
+								<div class="col-7">
+									<h6 class="card-subtitle mb-2">{$presentation->attendances->count()}</h6>
+								</div>
                         </div>
 
 						<a href="{plink :Front:Presentations:detail id => $presentation->getId()}" class="btn btn-primary">Více informací</a>
