Zobrazení Moje konference a rozlišení zda již konference proběhla nebo nikoliv

--- a/app/UI/Modules/Front/templates/@layout.latte
+++ b/app/UI/Modules/Front/templates/@layout.latte
@@ -33,7 +33,7 @@
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, dropdown-item, me-4" n:href=":Admin:Home:">Moje rezervace</a>
-					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, dropdown-item, me-4" n:href=":Admin:Home:">Moje konference</a>
+					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, dropdown-item, me-4" n:href=":Front:User:myConferences">Moje konference</a>
 					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, dropdown-item, me-4" n:href=":Front:User:myPresentations">Moje prezentace</a>
 					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, dropdown-item, me-4" n:href=":Front:User:default">Správa profilu</a>
 					  <div class="dropdown-divider"></div>
