--- a/app/UI/Modules/Front/templates/@layout.latte
+++ b/app/UI/Modules/Front/templates/@layout.latte
@@ -32,7 +32,7 @@
 					  Profil
 					</a>
 					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, dropdown-item, me-4" n:href=":Admin:Home:">Moje rezervace</a>
+					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, dropdown-item, me-4" n:href=":Front:Reservations:default">Moje rezervace</a>
 					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, dropdown-item, me-4" n:href=":Admin:Home:">Moje konference</a>
 					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, dropdown-item, me-4" n:href=":Front:User:myPresentations">Moje prezentace</a>
 					<a n:class="$presenter->isLinkCurrent(':Admin:Home:') ? active, dropdown-item, me-4" n:href=":Front:User:default">Správa profilu</a>
