--- a/app/UI/Components/Conference/templates/ConferenceList.latte
+++ b/app/UI/Components/Conference/templates/ConferenceList.latte
@@ -27,6 +27,15 @@
 							</div>
 						</div>
 
+						<div class="row">
+							<div class="col-5">
+								<h6 class="card-subtitle mb-2">Tagy:</h6>
+							</div>
+							<div class="col-7">
+								<h6 class="card-subtitle mb-2">{$conference->tags|implode:', '}</h6>
+							</div>
+						</div>
+
 						<!-- Začátek -->
 						<div class="row">
 							<div class="col-5">
@@ -49,10 +58,10 @@
 
 						<div class="row">
 							<div class="col-5">
-								<h6 class="card-subtitle mb-2">Počet rezervací:</h6>
+								<h6 class="card-subtitle mb-2">Obsazenost:</h6>
 							</div>
 							<div class="col-7">
-								<h6 class="card-subtitle mb-2">{$conference->reservations->count()}</h6>
+								<h6 class="card-subtitle mb-2">{$conference->getTotalReservedSeats()}/{$conference->capacity}</h6>
 							</div>
 						</div>
 
