feat: sprava prezentaci v adminu + flashmessages na ajax

--- a/app/UI/Modules/Base/templates/@layout.latte
+++ b/app/UI/Modules/Base/templates/@layout.latte
@@ -42,7 +42,7 @@
 </script>
 <script src="https://unpkg.com/nette-forms@3"></script>
 
-{snippet flashMessages}
+{snippet flashes}
 	{include '../../Base/templates/flashMessages.latte'}
 {/snippet}
 {block #main}
