--- a/app/UI/Modules/Front/Presentations/templates/detail.latte
+++ b/app/UI/Modules/Front/Presentations/templates/detail.latte
@@ -21,6 +21,11 @@
 		<div class="col">
 			<a class="btn btn-secondary" href="{plink :Front:Conference:detail id => $presentation->conference->getId()}">Zpátky na konferenci</a>
 		</div>
+		{if $user->isLoggedIn()}
+			<div class="col text-end">
+				<a href="#" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#dialog-question-add">Přidat otázku</a>
+			</div>
+		{/if}
 	</div>
 
 
@@ -117,33 +122,24 @@
 		</div>
 	</div>
 
+	{* Question ADD Form *}
+	<div class="modal fade" id="dialog-question-add" tabindex="-1" aria-labelledby="dialog-label" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h5 class="modal-title" id="dialog-label">Přidat otázku</h5>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Zavřít">
+					</button>
+				</div>
+				<div class="modal-body">
+					{control questionForm}
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Zavřít</button>
+				</div>
+			</div>
+		</div>
+	</div>
 
-
-{*	*}{* Presentation edit modal	*}
-{*	<div class="modal fade" id="presentationEditModal" style="z-index: 999999999;" tabindex="-1" role="dialog" aria-hidden="true">*}
-{*		<div class="modal-dialog" role="document">*}
-{*			<div class="modal-content">*}
-{*				<div class="modal-header">*}
-{*					<h5 class="modal-title" id="modalLabel">Upravit prezentaci</h5>*}
-{*					<button type="button" class="close" data-dismiss="modal" aria-label="Close">*}
-{*						<span aria-hidden="true">&times;</span>*}
-{*					</button>*}
-{*				</div>*}
-{*				<div class="modal-body">*}
-{*					{control presentationEditForm}*}
-{*				</div>*}
-{*			</div>*}
-{*		</div>*}
-{*	</div>*}
-
-{*	<script>*}
-{*		$.nette.ext('modal', {*}
-{*			success: function (payload) {*}
-{*				if (payload.showPresentationEditModal) {*}
-{*					$('#weddingModal').modal('show');*}
-{*				}*}
-{*			}*}
-{*		});*}
-{*	</script>*}
 
 {/block}
