--- a/app/UI/Modules/Admin/Room/templates/default.latte
+++ b/app/UI/Modules/Admin/Room/templates/default.latte
@@ -5,6 +5,7 @@
     <!-- Tlačítko pro přidání nové místnosti - přesměruje na novou stránku -->
     <!-- <a href="{link 'Room:create', conferenceId => $conferenceId}" class="btn btn-sm btn-success">Přidat novou místnost</a> -->
     <a href="#" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#dialog-room">Přidat místnost</a>
+	<a href="{plink :Admin:Conference:default}" class="btn btn-secondary ms-2">Zpět</a>
 
     <div class="modal fade" id="dialog-room" tabindex="-1" aria-labelledby="dialog-label" aria-hidden="true">
 		<div class="modal-dialog">
