--- a/app/UI/Components/Conference/templates/ConferenceList.latte
+++ b/app/UI/Components/Conference/templates/ConferenceList.latte
@@ -61,7 +61,7 @@
 								<h6 class="card-subtitle mb-2">Obsazenost:</h6>
 							</div>
 							<div class="col-7">
-								<h6 class="card-subtitle mb-2">{$conference->getTotalReservedSeats()}/{$conference->capacity}</h6>
+								<h6 class="card-subtitle mb-2">{$conference->getNumOfAttendees()}/{$conference->capacity}</h6>
 							</div>
 						</div>
 
