--- a/app/UI/Modules/Admin/Reservation/templates/default.latte
+++ b/app/UI/Modules/Admin/Reservation/templates/default.latte
@@ -1,13 +1,12 @@
 {block #content}
-    <h2>
         {if isset($conferenceName)}
-            Rezervace pro konferenci: {$conferenceName}
+			<h2>Rezervace pro konferenci: {$conferenceName}</h2>
 			{control grid}
 			<a href="{plink :Admin:Conference:default}" class="btn btn-secondary mt-3">Zpět na seznam konferencí</a>
         {else}
-            Rezervace
+            <h2>Rezervace</h2>
 			{control grid}
         {/if}
-    </h2>
-    
+
+
 {/block}
