omezeni poctu rezervovanych listku podle kapacity

--- a/app/UI/Modules/Front/Conference/templates/detail.latte
+++ b/app/UI/Modules/Front/Conference/templates/detail.latte
@@ -60,6 +60,16 @@
 		</div>
 	</div>
 
+	<!-- Obsazenost -->
+	<div class="row pt-2 justify-content-center align-items-center text-center">
+		<div class="col-5">
+			<h3 class="card-subtitle mb-2">Obsazenost:</h3>
+		</div>
+		<div class="col-5">
+			<h3 class="card-subtitle mb-2">{$conference->getNumOfAttendees()}/{$conference->capacity}</h3>
+		</div>
+	</div>
+
 	<!-- Přednášející -->
 	<div class="row pt-2 justify-content-center align-items-center text-center">
 		<div class="col-5">
