--- a/app/UI/Components/Conference/templates/ConferenceList.latte
+++ b/app/UI/Components/Conference/templates/ConferenceList.latte
@@ -56,6 +56,7 @@
 							</div>
 						</div>
 
+						<!-- Obsazenost -->
 						<div class="row">
 							<div class="col-5">
 								<h6 class="card-subtitle mb-2">Obsazenost:</h6>
