--- a/app/UI/Components/Presentation/templates/ScheduleList.latte
+++ b/app/UI/Components/Presentation/templates/ScheduleList.latte
@@ -34,7 +34,7 @@
 								<div class="card-body text-center">
 									<h5 class="card-title">{$presentation->title}</h5>
 									<p class="card-text">{$presentation->startsAt->format('H:i')} - {$presentation->endsAt->format('H:i')}</p>
-									<p class="card-text">Místnost: {$presentation->room->roomNumber}</p>
+									<p class="card-text">Místnost: {$presentation->room ? $presentation->room->roomNumber : 'TBD'}</p>
 									<a href="{plink :Front:Presentations:detail id => $presentation->getId()}"
 									   class="btn btn-primary">Více informací</a>
 									{if $user->isLoggedIn()}
