--- a/app/UI/Components/Presentation/templates/PresentationList.latte
+++ b/app/UI/Components/Presentation/templates/PresentationList.latte
@@ -5,9 +5,9 @@
 				<div class="card" style="width: 100%;"> <!-- Nastavení šířky karty na 100% sloupce -->
 					<div class="card-image-container"> <!-- Kontejner pro obrázek a overlay -->
 						{if $presentation->photo}
-							<img class="card-img-top" src="{$basePath}/{$presentation->photo}" alt="Card image cap">
+							<img class="card-img-top" src="{$basePath}/{$presentation->photo}" alt="Card image cap" style="max-height: 300px; object-fit: cover; width: 100%;">
 						{else}
-							<img class="card-img-top" src="{$basePath}/uploads/presentations/default.jpg" alt="Card image cap">
+							<img class="card-img-top" src="{$basePath}/uploads/presentations/default.jpg" alt="Card image cap" style="max-height: 300px; object-fit: cover; width: 100%;">
 						{/if}
                			{if isset($presentation->endsAt) && $presentation->endsAt < $currentDateTime} <!-- Zkontroluje, zda prezentace již skončila -->
 							<div class="presentation-overlay">PROBĚHLO</div>
