--- a/app/UI/Modules/Front/Sign/templates/up.latte
+++ b/app/UI/Modules/Front/Sign/templates/up.latte
@@ -7,7 +7,7 @@
 
 	<div class="row justify-content-center align-items-center text-center mt-4">
 		<div class="col-8 col-lg-12">
-			<h5>Pokud již máte účet, klikněte <a n:href="up" class="signin-link">zde</a>.</h5>
+			<h5>Pokud již máte účet, klikněte <a n:href="in" class="signin-link">zde</a>.</h5>
 		</div>
 	</div>
 {/block}
