--- a/app/UI/Modules/Front/Home/templates/default.latte
+++ b/app/UI/Modules/Front/Home/templates/default.latte
@@ -14,9 +14,8 @@
 
 {block content}
 
+	<h2 class="text-center">Konference v blízké době</h2>
+	{control soonConferences}
 
 	<h2 class="text-center">Nejpopulárnější prezentace</h2>
 	{control popularPresentations}
-
-	<h2 class="text-center">SoonConferences</h2>
-	{control soonConferences}
