--- a/app/UI/Components/Presentation/templates/PresentationList.latte
+++ b/app/UI/Components/Presentation/templates/PresentationList.latte
@@ -1,15 +1,15 @@
 <div class="row my-4">
 	{if $presentations->count() > 0}
 		{foreach $presentations as $presentation}
-			<div class="col-sm-12 col-md-6 col-lg-4 mb-4"> <!-- Responzivní sloupce -->
-				<div class="card" style="width: 100%;"> <!-- Nastavení šířky karty na 100% sloupce -->
-					<div class="card-image-container"> <!-- Kontejner pro obrázek a overlay -->
+			<div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+				<div class="card" style="width: 100%;">
+					<div class="card-image-container">
 						{if $presentation->photo}
 							<img class="card-img-top" src="{$basePath}/{$presentation->photo}" alt="Card image cap" style="max-height: 300px; object-fit: cover; width: 100%;">
 						{else}
 							<img class="card-img-top" src="{$basePath}/uploads/presentations/default.jpg" alt="Card image cap" style="max-height: 300px; object-fit: cover; width: 100%;">
 						{/if}
-               			{if isset($presentation->endsAt) && $presentation->endsAt < $currentDateTime} <!-- Zkontroluje, zda prezentace již skončila -->
+               			{if isset($presentation->endsAt) && $presentation->endsAt < $currentDateTime}
 							<div class="presentation-overlay">PROBĚHLO</div>
 						{/if}
 					</div>
