--- a/app/UI/Components/Room/templates/RoomGrid.Latte
+++ b/app/UI/Components/Room/templates/RoomGrid.Latte
@@ -9,10 +9,10 @@
 					</button>
 				</div>
 				<div class="modal-body">
-                    {snippet roomEditSnippet} <!-- This snippet will be redrawn via AJAX -->
-                        
-                            {control roomEditForm}  <!-- Load the form for the selected room -->
-                        
+                    {snippet roomEditSnippet}
+
+                            {control roomEditForm}
+
                     {/snippet}
                 </div>
 				<div class="modal-footer">
