--- a/app/UI/Modules/Front/Conference/templates/detail.latte
+++ b/app/UI/Modules/Front/Conference/templates/detail.latte
@@ -5,7 +5,7 @@
 				{if $conference->photo}
 					<img class="d-block w-100" src="{$basePath}/{$conference->photo}" alt="Card image cap">
 				{else}
-					<img class="d-block w-100" src="{$basePath}/uploads/conferences/default.jpg" alt="Card image cap">
+					<img class="d-block w-100" src="{$basePath}/uploads/conferences/default.webp" alt="Card image cap">
 				{/if}
 				<div class="overlay h-100">
 					<h2 class="overlay-text">{$conference->title}</h2>
