--- a/app/UI/Modules/Front/Presentations/templates/detail.latte
+++ b/app/UI/Modules/Front/Presentations/templates/detail.latte
@@ -5,7 +5,7 @@
 				{if $presentation->photo}
 					<img class="d-block w-100" src="{$basePath}/{$presentation->photo}" alt="Card image cap">
 				{else}
-					<img class="d-block w-100" src="{$basePath}/uploads/presentations/default.jpg" alt="Card image cap">
+					<img class="d-block w-100" src="{$basePath}/uploads/presentations/default.webp" alt="Card image cap">
 				{/if}
 				<div class="overlay h-100">
 					<h2 class="overlay-text">{$presentation->title}</h2>
