--- a/app/UI/Components/Presentation/templates/PresentationList.latte
+++ b/app/UI/Components/Presentation/templates/PresentationList.latte
@@ -7,7 +7,7 @@
 						{if $presentation->photo}
 							<img class="card-img-top" src="{$basePath}/{$presentation->photo}" alt="Card image cap" style="max-height: 300px; object-fit: cover; width: 100%;">
 						{else}
-							<img class="card-img-top" src="{$basePath}/uploads/presentations/default.jpg" alt="Card image cap" style="max-height: 300px; object-fit: cover; width: 100%;">
+							<img class="card-img-top" src="{$basePath}/uploads/presentations/default.webp" alt="Card image cap" style="max-height: 300px; object-fit: cover; width: 100%;">
 						{/if}
                			{if isset($presentation->endsAt) && $presentation->endsAt < $currentDateTime}
 							<div class="presentation-overlay">PROBĚHLO</div>
